2006-09-29    <mschimek@users.sf.net>

	* contrib/ntsc-cc.c, test/capture.c, test/decode.c:
	* test/ttxfilter.c, test/sliced2pes.c: Explicitely fflush output
	  buffers to ensure real time output of CC/XDS data.

2006-09-27    <mschimek@users.sf.net>

	* contrib/ntsc-cc.c: Replaced -x, -c optional args by new options
	  for compatibility with earlier versions. Added a more verbose
	  help text. Added an option to suppress WebTV links.

2006-09-26    <mschimek@users.sf.net>

	* contrib/ntsc-cc.c: Added --long options, -x optional arg to
	  filter out XDS packages, -c optional arg to redirect
	  caption to a different file. Don't print % if the XDS package
	  type is unknown.

2006-09-24    <mschimek@users.sf.net>

	* contrib/ntsc-cc.c (XDSdecode): Didn't handle zero bytes. Didn't
	  demultiplex F2 caption. Check for repeated packets didn't
	  compare the packet length.
	(main): Discard data not from line 21 or 284. Broken drivers can
	  go to hell.

2006-07-22    <mschimek@users.sf.net>

	* src/raw_decoder.c: Modified the Closed Caption 525 parameters
	  to decode the incorrect signal observed by Rich Kandel.
	* test/raw_decoder.c: Added test of decoder with the incorrect
	  signal observed by Rich.
	* src/io-sim.c (signal_closed_caption): Added optional simulation of
	  the incorrect signal observed by Rich.
	* src/io-sim.h, src/io-sim.c
	(_vbi_raw_vbi_image, _vbi_raw_video_image): New functions with flags
	  parameter instead of swap_fields boolean.

2006-06-17    <mschimek@users.sf.net>

	* src/io.c (device_ioctl): 
	* src/structpr.pl (test_cond): Handle r+w fields.
	* src/io.c (device_ioctl): Print saved errno.
	  Print-r/w-field flags were reversed.

2006-06-11    <mschimek@users.sf.net>

	* configure.in: CFLAGS changes have no effect after AC_PROG_CC,
	  added AC_GNU_SOURCE instead of -D_GNU_SOURCE.

	* contrib/ntsc-cc.c: s/RAW/print_raw because RAW is a macro on
	  GNU/kFreeBSD (Debian bug #372302).

	* configure.in: Bumped version number to 0.2.22.
